add get /api/hotel
